base/nginx-cicd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp-cicd
  namespace: test
  labels:
    app: nginx-cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cicd
  template:
    metadata:
      labels:
        app: nginx-cicd
    spec:
      containers:
      - name : nginx
        image: seongdong/nginx-test:0.5
