base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-svc
  namespace: test
spec:
  selector:
    app: cicd-nginx
  ports:
  - protocol: TCP
    port: 80
#  type: NodePort
