base/ing-nginx-cicd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-dashboard
  namespace: test
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: cicd.icurfer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-cicd
            port:
              number: 80
